--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="stylesheet" type="text/css" href="../src/assets/fontawesome-5.3.1/css/all.css">
+    <link rel="stylesheet" href="../src/assets/MaterialDesign/css/materialdesignicons.min.css">
     <title>qui</title>
   </head>
   <body>
@@ -14,4 +16,5 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script src="../src/assets/fontawesome-5.3.1/js/all.min.js"></script>
 </html>
