meta description edit

--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta property="og:title" content="How to change the address bar color in browsers" />
-    <meta property="og:description" content="How to change the address bar color in Chrome, Firefox, Opera, Safari" />
+    <meta property="og:title" content="Qui" />
+    <meta name="description" content="Upload excel sheet and single questions">
+    <meta property="og:description" content="Upload excel sheet and single questions" />
     <meta property="og:url"
-          content="http://webdevelopmentscripts.com/64-how-to-change-the-address-bar-color-in-chrome-firefox-opera-safari" />
+          content="https://pre-qui.herokuapp.com/" />
     <meta property="og:image"
           content="http://webdevelopmentscripts.com/post-images/685b-change-browser-address-bar-color-chrome-android.jpeg" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" type="text/css" href="../src/assets/fontawesome-5.3.1/css/all.css">
     <link rel="stylesheet" href="../src/assets/MaterialDesign/css/materialdesignicons.min.css">
-    <title>qui</title>
+    <title>Qui</title>
   </head>
   <body>
     <noscript>
