--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta property="og:title" content="Qui" />
-    <meta name="description" content="Upload excel sheet and single questions">
-    <meta property="og:description" content="Upload excel sheet and single questions" />
+    <meta property="og:title" content="Ceph" />
+    <meta name="description" content="Ceph The Great's Portfolio">
+    <meta property="og:description" content="Ceph The Great's Portfolio" />
     <meta property="og:url"
           content="https://pre-qui.herokuapp.com/" />
     <meta property="og:image"
@@ -14,7 +14,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" type="text/css" href="../src/assets/fontawesome-5.3.1/css/all.css">
     <link rel="stylesheet" href="../src/assets/MaterialDesign/css/materialdesignicons.min.css">
-    <title>Qui</title>
+    <title>Ceph-Folio</title>
   </head>
   <body>
     <noscript>
