web view updated, info page added

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
           content="http://webdevelopmentscripts.com/post-images/685b-change-browser-address-bar-color-chrome-android.jpeg" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" type="text/css" href="../src/assets/fontawesome-5.3.1/css/all.css">
+    <link rel="stylesheet" type="text/css" href="../src/assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="../src/assets/MaterialDesign/css/materialdesignicons.min.css">
     <title>Ceph-Folio</title>
   </head>
