--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta property="og:url"
           content="https://pre-qui.herokuapp.com/" />
     <meta property="og:image"
-          content="http://webdevelopmentscripts.com/post-images/685b-change-browser-address-bar-color-chrome-android.jpeg" />
+          content="https://i.ibb.co/vq8x3gK/ga.jpg" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" type="text/css" href="../src/assets/fontawesome-5.3.1/css/all.css">
     <link rel="stylesheet" type="text/css" href="../src/assets/css/bootstrap.min.css">
