lazy load added

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,15 @@
           content="https://pre-qui.herokuapp.com/" />
     <meta property="og:image"
           content="https://i.ibb.co/vq8x3gK/ga.jpg" />
+    <!--favicon-->
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/favicon/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
     <link rel="stylesheet" type="text/css" href="../src/assets/fontawesome-5.3.1/css/all.css">
     <link rel="stylesheet" type="text/css" href="../src/assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="../src/assets/MaterialDesign/css/materialdesignicons.min.css">
