--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Ceph The Great's Portfolio">
     <meta property="og:description" content="Ceph The Great's Portfolio" />
     <meta property="og:url"
-          content="https://pre-qui.herokuapp.com/" />
+          content="https://ceph.netlify.app/" />
     <meta property="og:image"
           content="https://i.ibb.co/vq8x3gK/ga.jpg" />
     <!--favicon-->
